# ticketpilot

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DATASET_EXPANSION_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  MEMORY.md  PUBLIC_DATASETS_PLAN.md  README.en.md  README.md  docker-compose.yml  optimization_history.jsonl  optimization_state.json  pyproject.toml  run_optimizer_with_llm.py
.claude/: CLAUDE.md  settings.json
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
config/: reranker.yaml
docs/: AGENT_HARNESS_REPORT.md  CHECKPOINT_2026-06-01.md  CHECKPOINT_2026-06-02-FINAL.md  CHECKPOINT_2026-06-02-P0.md  CHECKPOINT_2026-06-02.md  CHECKPOINT_20260603.md  EVAL_UPGRADE_PLAN.md  IMPROVEMENT_TRACKING.md  INDEX.md  KNOWLEDGE_EXPANSION_PLAN.md  MAINTENANCE.md  RAG_AGENT_INDUSTRY_REPORT.md  RETRIEVAL_AGENT_PLAN.md  ai_development_workflow.md  architecture.md  changelog.md  demo_cases.md  documentation_inventory.md  evaluation_plan.md  github_release_checklist.md  limitations.md  phase_status.md  retrieval_design.md  retrieval_spec.md  technical_decisions.md
frontend/: README.md  index.html  package-lock.json  package.json  start.sh
harness-plugin/: README.md  openspec-plugin.json
openspec/: project.md
prompts/: auto_iterate_ticketpilot.md
reports/: product_evidence.json  product_evidence.md
scripts/: __init__.py  add_tsvector_column.py  bootstrap_harness.sh  calibrate_with_reflection.py  demo.sh  (+36 more)
(+718 files in other folders)
