[project]
name = "ticketpilot"
version = "0.1.0"
description = "AI-powered customer service ticket triage with hybrid retrieval and deterministic classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "langgraph>=1.1.10",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.46.0",
    "sentence-transformers>=5.5.1",
    "openai>=2.38.0",
    "plotly>=6.8.0",
]

[project.scripts]
ticketpilot = "ticketpilot:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.12",
]

[tool.ruff.lint]
# E402: logger definition between import blocks is intentional
extend-ignore = ["E402"]
